<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <include android:id="@+id/header" layout="@layout/generic_header" />
    <ScrollView android:id="@+id/optionsScroll"
        android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1" >
		<LinearLayout android:id="@+id/optionsList"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="5dp"
			android:orientation="vertical">
			<EditText android:text=""
				android:hint="@string/configurationName"
				android:id="@+id/edit_name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom = "10dp" />
			<EditText android:text=""
				android:hint="@string/hostDescription"
				android:id="@+id/edit_host"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<EditText android:text=""
				android:hint="@string/portDescription"
				android:id="@+id/edit_port"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<EditText android:text=""
				android:hint="@string/passwordDescription"
				android:id="@+id/edit_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<CheckBox android:text="@string/streamingManualURL"
				android:id="@+id/edit_streamingManualURL"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop = "10dp" />
			<EditText android:text=""
				android:hint="@string/portStreamingDescription"
				android:id="@+id/edit_streamingPort"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<EditText android:text=""
				android:hint="@string/streamingURLDescription"
				android:id="@+id/edit_streamURL"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:visibility="gone" />
		</LinearLayout>
	</ScrollView>

	<LinearLayout android:id="@+id/LinearLayout01" android:background="@android:drawable/title_bar"
		android:layout_height="wrap_content" android:layout_width="fill_parent" android:paddingTop="4dip" >
		<Button android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/Remove"
			android:layout_weight="1"
			android:text="@string/removeSongs"/>
		<Button android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:id="@+id/Cancel" 
			android:layout_weight="1"
			android:text="@string/cancel"/>
	</LinearLayout>


</LinearLayout>
