<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center">

	<TextView android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:gravity="center" android:textSize="25sp" android:padding="10px"
	android:text="@string/aboutText1"/>
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:gravity="center"
	android:text="@string/aboutText2" android:padding="10px"/>	
	
	<TextView android:layout_width="fill_parent" android:id="@+id/versionText"  android:padding="10px"
	android:layout_height="wrap_content" android:singleLine="true"  android:gravity="center" />	
	
	<TextView android:layout_width="fill_parent" android:padding="10px"
	android:layout_height="wrap_content" android:singleLine="true"  android:gravity="center" 
	android:text="@string/aboutIcon"/>
	
	<TextView android:layout_width="fill_parent" android:padding="10px"
	android:layout_height="wrap_content" android:singleLine="true"  android:gravity="center" 
	android:text="@string/aboutLastFM"/>	
		
	<ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" 
				android:layout_height="wrap_content" android:src="@drawable/lastfm_red" 
				android:gravity="center" />


</LinearLayout>
